--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "dotenv": "^16.0.1",
+    "firebase": "^9.8.3",
     "node-fetch": "^3.2.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
